# CrewAI-Job-Applications

./: .gitignore  README.md  pyproject.toml
results/: customized_cover_letters.md  filtered_jobs.md  job_opportunities.md  sample_cover_letter.md  submitted_applications.csv
src/job_applications/: crew.py  main.py
src/job_applications/config/: agents.yaml  tasks.yaml
